[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "langgraph-mcp"
version = "0.0.1"
description = "Model Context Protocol (MCP) tools for LangGraph"
authors = [
    {name = "Vadym Barda", email = "19161700+vbarda@users.noreply.github.com "}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.70",
    "mcp>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
