[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "langchain-mcp-adapters"
version = "0.0.1"
description = "Make Anthropic Model Context Protocol (MCP) tools compatible with LangChain and LangGraph agents."
authors = [
    {name = "Vadym Barda", email = "19161700+vbarda@users.noreply.github.com "}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.35",
    "mcp>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
